--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
   <!--End nav bar-->
 
   <div class="container">
-
     <div class="row mt-4">
       <div class="col-3 ml-4">
           <h1 class="text-secondary"><strong>About Me</strong></h1>
@@ -54,7 +53,7 @@
       </div>
 
       <div class="col-5 ml-4">
-        <p class="text-secondary">My name is Andrew D'Ambrosio. I am 28 years old and reside in Monroe Township, NJ. Welcome to my page! This lovely gentleman to the left is not me, but you will be graced with a photo of me in the near future!</p>
+        <p class="text-secondary index-text">My name is Andrew D'Ambrosio. I am 28 years old and reside in Monroe Township, NJ. Welcome to my page! This lovely gentleman to the left is not me, but you will be graced with a photo of me in the near future!</p>
       </div>
     </div>
 
