--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
           <a class="navbar-brand" href="portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="navbar-brand" href="contact.html">Contact<span class="sr-only">(current)</span></a>
+          <a class="navbar-brand" href="contact.html">Contact</a>
         </li>
       </ul>
     </div>
