contact page changed from a form

--- a/contact.html
+++ b/contact.html
@@ -42,21 +42,12 @@
       </div>
     </div>
 
-    <form>
-
-      <div class="form-group mt-4">
-        <label for="exampleFormControlInput1"><strong>Name</strong></label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ben Dover">
-      </div>
-      <div class="form-group">
-        <label for="exampleFormControlInput1"><strong>Email</strong></label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-      </div>
-      <div class="form-group">
-        <label for="exampleFormControlTextarea1"><strong>Message</strong></label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Leave a message here..." rows="3"></textarea>
-      </div>
-    </form>
+    <div class="contact">
+      <p>
+        <h4>Email: adambrosio20@gmail.com</h4>
+        <h4>Phone: 732.547.1806</h4>
+      </p>
+    </div>
   </div>
   </div>
 
