--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
 
       <div class="col-5 ml-4">
-        <p class="text-secondary index-text">My name is Andrew D'Ambrosio. I am 28 years old and reside in Monroe Township, NJ. Welcome to my page! I am a graduate of the Rutgers Uiversity Coding Bootcamp looking to begin a career in front-end web development.</p>
+        <p class="text-secondary index-text">My name is Andrew D'Ambrosio. I am 28 years old and reside in Monroe Township, NJ. I am a graduate of the Rutgers Uiversity Coding Bootcamp with proficiency in HTML5, CSS3, JavaScript, Java, jQuery, Node.js, Bootstrap, Handlebars, React.js, MySQL, MongoDB, and Git.</p>
       </div>
     </div>
 
