technologies added to projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
               alt="Covid-19 Info App"></a>
           <div class="card-body">
             <h5 class="card-title">Covid-19 Statistics Tracker</h5>
-              <p class="card-text">Application to get current information regarding the Covid-19 pandemic</p>
+              <p class="card-text">Application to get current information regarding the Covid-19 pandemic. Utilizes HTML, CSS, JavaScript, jQuery, and Materialize.</p>
               <p class="site-url">Link: <a class="site-url" href="https://megannh6349.github.io/COVID-19-app/">Covid-19
                   Info App</a></p>
               <p class="repo">Repo: <a class="repo-url" href="https://github.com/Megannh6349/COVID-19-app">Covid-19 Info
@@ -71,7 +71,7 @@
             alt="Password generator"></a>
           <div class="card-body">
             <h5 class="card-title">Password Generator</h5>
-            <p class="card-text">Application that will generate a random password using user chosen criteria</p>
+            <p class="card-text">Application that will generate a random password using user chosen criteria. Utilizes HTML, CSS, JavaScript, jQuery, and Bootstrap.</p>
             <p class="site">Link: <a class="site-url" href="https://adambrosio.github.io/homework-3/">Password
                 Generator</a>
             </p>
@@ -89,7 +89,7 @@
             alt="Weather dashboard"></a>
           <div class="card-body">
             <h5 class="card-title">Weather Dashboard</h5>
-            <p class="card-text">Application that will get weather data on city of user's choosing</p>
+            <p class="card-text">Application that will get weather data on city of user's choosing. Utilizes HTML, CSS, JavaScript, jQuery, and Bootstrap.</p>
             <p class="site">Link: <a class="site-url" href="https://adambrosio.github.io/homework-6/">Weather Dashboard</a>
             </p>
             <p class="repo">Repo: <a class="repo-url" href="https://github.com/adambrosio/homework-6">Weather Dashboard Repository</a></p>
@@ -113,7 +113,7 @@
               alt="Reserevation Maker"></a>
           <div class="card-body">
             <h5 class="card-title">Reservation Maker</h5>
-              <p class="card-text">Application to make reservations for a variety of businesses</p>
+              <p class="card-text">Application to make reservations for a variety of businesses. Utilizes HTML, CSS, Foundation, Sass, JavaScript, MySQL, Express, ReactJS, and Node.js</p>
               <p class="site-url">Link: <a class="site-url" href="https://limitless-badlands-33769.herokuapp.com/">Reservation Maker App</a></p>
               <p class="repo">Repo: <a class="repo-url" href="https://github.com/adambrosio/reservation-maker">Reservation Maker Repository</a></p>
           </div>
