--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,8 @@
       <p>
         <h4>Email: adambrosio20@gmail.com</h4>
         <h4>Phone: 732.547.1806</h4>
+        <h4><a class="linkedin" href="https://www.linkedin.com/in/andrew-d-ambrosio-35617ba7/">LinkedIn</a></h4>
+        <h4><a class="github" href="https://github.com/adambrosio">Github</a></h4>
       </p>
     </div>
   </div>
