better descriptions and technologies added to projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -89,7 +89,7 @@
             alt="Weather dashboard"></a>
           <div class="card-body">
             <h5 class="card-title">Weather Dashboard</h5>
-            <p class="card-text">Application that will get weather data on city of user's choosing. Utilizes HTML, CSS, JavaScript, jQuery, and Bootstrap.</p>
+            <p class="card-text">Application that will get current and 5-day weather forecasts for the city of the user's choosing. Utilizes HTML, CSS, JavaScript, jQuery, and Bootstrap.</p>
             <p class="site">Link: <a class="site-url" href="https://adambrosio.github.io/homework-6/">Weather Dashboard</a>
             </p>
             <p class="repo">Repo: <a class="repo-url" href="https://github.com/adambrosio/homework-6">Weather Dashboard Repository</a></p>
@@ -113,7 +113,7 @@
               alt="Reserevation Maker"></a>
           <div class="card-body">
             <h5 class="card-title">Reservation Maker</h5>
-              <p class="card-text">Application to make reservations for a variety of businesses. Utilizes HTML, CSS, Foundation, Sass, JavaScript, MySQL, Express, ReactJS, and Node.js</p>
+              <p class="card-text">Application to make reservations for a variety of businesses including salons, bowling alleys, and restaurants. Utilizes HTML, CSS, Foundation, Sass, JavaScript, MySQL, Express, ReactJS, and Node.js</p>
               <p class="site-url">Link: <a class="site-url" href="https://limitless-badlands-33769.herokuapp.com/">Reservation Maker App</a></p>
               <p class="repo">Repo: <a class="repo-url" href="https://github.com/adambrosio/reservation-maker">Reservation Maker Repository</a></p>
           </div>
