deleted something from about me

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
 
       <div class="col-5 ml-4">
-        <p class="text-secondary index-text">My name is Andrew D'Ambrosio. I am 28 years old and reside in Monroe Township, NJ. I am a graduate of the Rutgers Uiversity Coding Bootcamp with proficiency in HTML5, CSS3, JavaScript, Java, jQuery, Node.js, Bootstrap, Handlebars, React.js, MySQL, MongoDB, and Git. My personal skills include combining innovation and in-depth problem solving abilities to develop applications with real-world applicability. My strengths include a relentless work ethic and the ability to complete tasks both efficiently and effectively. I have a passion for the field of technology and learning new technologies and programming languages.</p>
+        <p class="text-secondary index-text">My name is Andrew D'Ambrosio. I am 28 years old and reside in Monroe Township, NJ. I am a graduate of the Rutgers Uiversity Coding Bootcamp with proficiency in HTML5, CSS3, JavaScript, jQuery, Node.js, Bootstrap, Handlebars, React.js, MySQL, MongoDB, and Git. My personal skills include combining innovation and in-depth problem solving abilities to develop applications with real-world applicability. My strengths include a relentless work ethic and the ability to complete tasks both efficiently and effectively. I have a passion for the field of technology and learning new technologies and programming languages.</p>
       </div>
     </div>
 
