fixed color fonts for everything

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
   <div class="container">
     <div class="row mt-4">
       <div class="col-3 ml-4">
-        <h1 class="text-secondary mb-4"><strong>Portfolio</strong></h1>
+        <h1 class="heading mb-4"><strong>Portfolio</strong></h1>
       </div>
     </div>
   </div>
