--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
   <div class="container">
     <div class="row mt-4">
       <div class="col-3 ml-4">
-        <h1 class="text-secondary"><strong>Contact</strong></h1>
+        <h1 class="heading"><strong>Contact</strong></h1>
       </div>
     </div>
 
