--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div class="container">
     <div class="row mt-4">
       <div class="col-3 ml-4">
-          <h1 class="text-secondary"><strong>About Me</strong></h1>
+          <h1 class="heading"><strong>About Me</strong></h1>
       </div>
     </div>
 
@@ -51,7 +51,7 @@
       </div>
 
       <div class="col-5 ml-4">
-        <p class="text-secondary">My name is Andrew D'Ambrosio. I am 28 years old and reside in Monroe Township, NJ. I am a graduate of the Rutgers Uiversity Coding Bootcamp with proficiency in HTML5, CSS3, JavaScript, jQuery, Node.js, Bootstrap, Handlebars, React.js, MySQL, MongoDB, and Git. My personal skills include combining innovation and in-depth problem solving abilities to develop applications with real-world applicability. My strengths include a relentless work ethic and the ability to complete tasks both efficiently and effectively. I have a passion for the field of technology and learning new technologies and programming languages.</p>
+        <p class="about-me">My name is Andrew D'Ambrosio. I am 28 years old and reside in Monroe Township, NJ. I am a graduate of the Rutgers Uiversity Coding Bootcamp with proficiency in HTML5, CSS3, JavaScript, jQuery, Node.js, Bootstrap, Handlebars, React.js, MySQL, MongoDB, and Git. My personal skills include combining innovation and in-depth problem solving abilities to develop applications with real-world applicability. My strengths include a relentless work ethic and the ability to complete tasks both efficiently and effectively. I have a passion for the field of technology and learning new technologies and programming languages.</p>
       </div>
     </div>
 
