--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar navbar-dark purple">
     <a class="navbar-brand" href="#">Andrew D'Ambrosio</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,8 +44,8 @@
 
     <div class="contact">
       <p>
-        <h4>Email: adambrosio20@gmail.com</h4>
-        <h4>Phone: 732.547.1806</h4>
+        <h4 class='contact'>Email: adambrosio20@gmail.com</h4>
+        <h4 class='contact'>Phone: 732.547.1806</h4>
         <h4><a class="linkedin" href="https://www.linkedin.com/in/andrew-d-ambrosio-35617ba7/">LinkedIn</a></h4>
         <h4><a class="github" href="https://github.com/adambrosio">Github</a></h4>
       </p>
