--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
 
+ <!--Start nav bar-->
   <nav class="navbar navbar-expand-lg navbar navbar-dark purple">
     <a class="navbar-brand" href="index.html">Andrew D'Ambrosio</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
